--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h4>Hello</h4>
       <h1>I'm kayembe Jacques</h1>
       <h3>Softeware Developer and Programming Enthusiast</h3>
-      <a href="" class="btn" target="_blank">Download Resume</a>
+      <a href="https://docs.google.com/document/d/1yiV-ejOfKBZLt8OVy3I9BbM2fIX-q6WRzNA_K0kk6OQ/edit?usp=sharing" class="btn" target="_blank">Download Resume</a>
     </div>
   </section>
 
@@ -208,11 +208,6 @@ Will you win? The chance is random!</h3>
 
   <!--custom js link-->
   <script type="text/javascript" src="script.js"></script>
-
-  
-  
-  
-
 
 </body>
 </html>
