update github pages links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="#project">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
+   <a href="#menu-icon" onclick="menu()"><i class='bxr  bx-menu-wider bx-flip-horizontal'  style='color:#ec0b0b'></i> </a>
   </header>
 
   <!--home-->
@@ -68,7 +69,7 @@
           <div class="tech_img">
             <img class="skill-icon" src="dev-icons/c-plusplus.svg" alt="C Programming Language">
           </div>
-          <h3>C</h3>
+          <h3>C++</h3>
         </div>
       </div>
       <div class="skill-box">
@@ -150,8 +151,8 @@ Will you win? The chance is random!</h3>
 
         <iframe src=" https://kazadijacques.github.io/Rock-Paper-Scissors/" class="row-img"></iframe>
         <div class="button-container">
-           <a href="https://github.com/Kazadijacques/Todo-List.git" class="button">Source Code</a>
-           <a href=" https://kazadijacques.github.io/Todo-List/" class="button">Live Demo</a>
+           <a href="https://github.com/Kazadijacques/Rock-Paper-Scissors" class="button">Source Code</a>
+           <a href="https://kazadijacques.github.io/Rock-Paper-Scissors/" class="button">Live Demo</a>
         </div>
                           
       </div>
@@ -166,8 +167,8 @@ Will you win? The chance is random!</h3>
 
         <iframe src=" https://kazadijacques.github.io/Form-validation-project/" class="row-img"></iframe>
         <div class="button-container">
-           <a href="https://github.com/Kazadijacques/Todo-List.git" class="button">Source Code</a>
-           <a href=" https://kazadijacques.github.io/Todo-List/" class="button">Live Demo</a>
+           <a href="https://github.com/Kazadijacques/Form-validation-project" class="button">Source Code</a>
+           <a href="https://kazadijacques.github.io/Form-validation-project/" class="button">Live Demo</a>
         </div>
                                   
       </div>
