--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="home-text">
       <h4>Hello</h4>
       <h1>I'm kayembe Jacques</h1>
-      <h3>Softeware Developer and Programming Enthusiast</h3>
+      <h3>Front end Developer and Programming Enthusiast</h3>
       <a href="https://docs.google.com/document/d/1yiV-ejOfKBZLt8OVy3I9BbM2fIX-q6WRzNA_K0kk6OQ/edit?usp=sharing" class="btn" target="_blank">Download Resume</a>
     </div>
   </section>
@@ -52,7 +52,14 @@
     <div class="about-text">
       <h2>About Me</h2>
       <h4>Hi, My name is Kayembe Jacques !!</h4>
-     <p>Fully committed to the philosophy of life-long learning, I'm a full stack developer with a deep passion for javascript, React and all things web development. The unique combination of creativity, logic, technology and never running out of new things to discover, drives my excitement and passion for web development. When I'm not at my computer I like to spend my time reading, keeping fit and playing guitar</p>
+     <p>Fully committed to the philosophy of life-long learning, 
+       I'm a junior Front end developer with a deep passion for html,
+       Css and javascript, and all things web development. 
+       The unique combination of creativity, logic,
+        technology and never running out of new things to discover, 
+        drives my excitement and passion for web development. 
+        When I'm not at my computer I like to spend my time reading and keeping fit
+      </p>
 
      <a href="#contact" class="btn">Contact Me</a>
     </div>
